Fix ideas header wrapping on large dimensions

--- a/csce242/assignments/03/styles.css
+++ b/csce242/assignments/03/styles.css
@@ -128,6 +128,9 @@ footer {
 
 	#ideas {
 		padding: 0 150px;
+	}
+
+	#ideas-container {
 		display: flex;
 		flex-wrap: wrap;
 	}
